# SudokuSolver

./: CMakeLists.txt  README.md  compile_error.txt  main.cpp  server.cpp  server_build_log.txt
boards/: README.md  unsolvable.txt
boards/16x16/: easy.txt  hard.txt  medium.txt  minimal.txt  unsolvable.txt
boards/25x25/: easy.txt  hard.txt  medium.txt
boards/9x9/: medium.txt
frontend/: app.js  index.html  style.css
include/: cell.h  httplib.h  sudoku.h
src/: cell.cpp  sudoku.cpp
sudoku-generator/: index.html  package-lock.json  package.json
sudoku-generator/src/: App.css  App.jsx
tests/: test_easy.cpp  test_hard.cpp  test_loading.cpp  test_medium.cpp  test_minimal.cpp  test_unsolvable.cpp
tests/16x16/: easy.cpp  hard.cpp  loading.cpp  medium.cpp  minimal.cpp
tests/25x25/: easy.cpp  hard.cpp  medium.cpp  minimal.cpp
tests/9x9/: test_easy.cpp  test_hard.cpp  test_loading.cpp  test_medium.cpp  test_minimal.cpp  test_unsolvable.cpp
